[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameFrontHUDRelated/Subs/EnergyPanel/Assets/EnegyPanel_BatteryFrameAndLabel.png" type="Texture" id=1]
[ext_resource path="res://GameFrontHUDRelated/Subs/EnergyPanel/Assets/EnegyPanel_BatteryBackground.png" type="Texture" id=2]
[ext_resource path="res://GameFrontHUDRelated/Subs/EnergyPanel/Assets/EnegyPanel_BatteryFillForeground.png" type="Texture" id=3]
[ext_resource path="res://GameFrontHUDRelated/Subs/EnergyPanel/Assets/EnegyPanel_BatteryFillForeground_Forecasted.png" type="Texture" id=4]
[ext_resource path="res://GameFrontHUDRelated/Subs/EnergyPanel/EnergyPanel.gd" type="Script" id=5]

[node name="EnergyPanel" type="Control"]
margin_right = 264.0
margin_bottom = 60.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="BarBackground" type="TextureRect" parent="."]
margin_left = 7.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 56.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="TextureProgressCurrent" type="TextureProgress" parent="."]
margin_left = 7.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 56.0
mouse_filter = 2
step = 0.05
value = 50.0
texture_progress = ExtResource( 4 )

[node name="TextureProgressForcasted" type="TextureProgress" parent="."]
margin_left = 7.0
margin_top = 26.0
margin_right = 257.0
margin_bottom = 56.0
mouse_filter = 2
step = 0.05
value = 30.0
texture_progress = ExtResource( 3 )

[node name="Frame" type="TextureRect" parent="."]
margin_right = 264.0
margin_bottom = 59.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="EnergyLabel" type="Label" parent="."]
margin_left = 84.0
margin_top = 4.0
margin_right = 179.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
text = "xxx"
align = 1
valign = 1

[node name="RewindReminder" type="Label" parent="."]
modulate = Color( 0.866667, 0.866667, 0.866667, 1 )
margin_left = 4.0
margin_top = 23.0
margin_right = 261.0
margin_bottom = 59.0
text = "Hold [%s] to rewind"
align = 1
valign = 1

[node name="BarForegroundCosmeticContainer" type="Control" parent="."]
margin_left = 7.0
margin_top = 26.0
margin_right = 29.0
margin_bottom = 45.0
mouse_filter = 2
